--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -86,6 +86,7 @@
                     app:cardElevation="2dp">
 
                     <LinearLayout
+                        android:id="@+id/walletWrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
