--- a/app/src/main/res/layout/fragment_token.xml
+++ b/app/src/main/res/layout/fragment_token.xml
@@ -28,51 +28,56 @@
 
     <!-- Empty state -->
 
-    <LinearLayout
+    <android.support.v4.widget.NestedScrollView
         android:id="@+id/emptyState"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center"
-        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
         android:visibility="gone"
         tools:visibility="visible">
 
-        <TextView
-            android:id="@+id/emptyStateTitle"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textColor="@color/textColorPrimary"
-            style="@style/TextStyleMedium"
-            tools:text="No Tokens Yet"/>
+            android:orientation="vertical"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center">
 
-        <android.support.v4.widget.Space
-            android:layout_width="0dp"
-            android:layout_height="11dp" />
+            <TextView
+                android:id="@+id/emptyStateTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textColor="@color/textColorPrimary"
+                style="@style/TextStyleMedium"
+                tools:text="No Tokens Yet"/>
 
-        <TextView
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="16sp"
-            android:textColor="@color/textColorSecondary"
-            android:text="@string/empty_state_tokens_message"/>
+            <android.support.v4.widget.Space
+                android:layout_width="0dp"
+                android:layout_height="11dp" />
 
-        <android.support.v4.widget.Space
-            android:layout_width="0dp"
-            android:layout_height="12dp" />
+            <TextView
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="16sp"
+                android:textColor="@color/textColorSecondary"
+                android:text="@string/empty_state_tokens_message"/>
 
-        <TextView
-            android:id="@+id/shareWalletAddress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/share_wallet_address"
-            android:textAllCaps="true"
-            android:textSize="14sp"
-            android:textColor="@color/colorPrimary"
-            style="@style/TextStyleMedium"/>
+            <android.support.v4.widget.Space
+                android:layout_width="0dp"
+                android:layout_height="12dp" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/shareWalletAddress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/share_wallet_address"
+                android:textAllCaps="true"
+                android:textSize="14sp"
+                android:textColor="@color/colorPrimary"
+                style="@style/TextStyleMedium"/>
 
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 </FrameLayout>
