--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -54,34 +54,43 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <FrameLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingTop="@dimen/activity_horizontal_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:background="@color/colorPrimaryDarkSecondary"
                 app:layout_scrollFlags="scroll"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-                <LinearLayout
+                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:textColor="@color/textColorContrast"
+                    android:textSize="16sp"
+                    android:text="@string/wallet_address"
+                    style="@style/TextStyleMedium"/>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:background="@color/colorPrimary"/>
+                <android.support.v4.widget.Space
+                    android:layout_width="0dp"
+                    android:layout_height="4dp" />
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="56dp"
-                        android:background="@color/windowBackground"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/textColorContrastTransparent"
+                    android:textSize="14sp"
+                    android:text="@string/wallet_info"/>
 
-                </LinearLayout>
+                <android.support.v4.widget.Space
+                    android:layout_width="0dp"
+                    android:layout_height="12dp" />
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"
-                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_height="wrap_content"
                     app:cardCornerRadius="2dp"
                     app:cardElevation="2dp">
 
@@ -90,11 +99,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
+                        android:gravity="center_vertical"
                         android:padding="20dp">
 
                         <ImageView
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
                             android:layout_gravity="center_vertical"
                             app:srcCompat="@drawable/ic_qr_code"/>
 
@@ -102,29 +112,15 @@
                             android:layout_width="@dimen/activity_horizontal_margin"
                             android:layout_height="0dp" />
 
-                        <LinearLayout
-                            android:layout_width="wrap_content"
+                        <com.toshi.view.custom.CollapsingTextView
+                            android:id="@+id/walletAddress"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:textColor="@color/textColorSecondary"
-                                android:textSize="16sp"
-                                android:text="@string/wallet_address"
-                                style="@style/NormalEllipsizeEndStyle"/>
-
-                            <com.toshi.view.custom.CollapsingTextView
-                                android:id="@+id/walletAddress"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:textColor="@color/textColorPrimary"
-                                android:textSize="16sp"
-                                tools:text="0x115..45F3a"
-                                style="@style/NormalEllipsizeEndStyle"/>
-
-                        </LinearLayout>
+                            android:layout_weight="1"
+                            android:textColor="@color/textColorPrimary"
+                            android:textSize="16sp"
+                            tools:text="0x115..45F3a"
+                            style="@style/NormalEllipsizeEndStyle"/>
                         
                         <Space
                             android:layout_width="0dp"
@@ -137,12 +133,18 @@
                             android:layout_height="32dp"
                             android:textSize="14sp"
                             style="@style/ButtonAllCaps"
+                            android:textColor="@color/textColorPrimary"
                             android:padding="0dp"
                             android:text="@string/copy"/>
 
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
-            </FrameLayout>
+
+                <android.support.v4.widget.Space
+                    android:layout_width="0dp"
+                    android:layout_height="20dp" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
