--- a/app/src/main/res/layout/list_item__token.xml
+++ b/app/src/main/res/layout/list_item__token.xml
@@ -63,7 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
-            android:textColor="@color/textColorPrimary"
+            android:textColor="@color/textColorSecondary"
             style="@style/NormalEllipsizeEndStyle"
             tools:text="0x"/>
 
