--- a/app/src/main/res/layout/activity_send_erc20_token.xml
+++ b/app/src/main/res/layout/activity_send_erc20_token.xml
@@ -198,6 +198,18 @@
                 android:hint="@string/hex_hint"
                 android:background="@null"/>
 
+            <TextView
+                android:id="@+id/addressError"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginTop="10dp"
+                android:textSize="13sp"
+                android:textColor="@color/error_color"
+                tools:text="You can only send tokens to an Ethereum address."
+                android:visibility="gone"
+                tools:visibility="visible"/>
+
             <android.support.v4.widget.Space
                 android:layout_width="0dp"
                 android:layout_height="20dp" />
