--- a/app/src/main/res/drawable/background_with_circle_corners.xml
+++ b/app/src/main/res/drawable/background_with_circle_corners.xml
@@ -16,8 +16,8 @@
   ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<rotate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fromDegrees="90"
-    android:toDegrees="0"
-    android:drawable="@drawable/ic_switch">
-</rotate>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@color/windowBackground" />
+    <stroke android:width="1dp" android:color="@color/border_color" />
+    <corners android:radius="44dp" />
+</shape>
