--- a/app/src/main/res/layout/activity_send_erc20_token.xml
+++ b/app/src/main/res/layout/activity_send_erc20_token.xml
@@ -90,7 +90,7 @@
                 android:orientation="horizontal"
                 android:gravity="center_vertical">
 
-                <com.toshi.view.custom.SuffixEditText
+                <com.toshi.view.custom.PrefixSuffixEditText
                     android:id="@+id/toAmount"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
