Send token payment (#877)
* Show payment confirmation

* Add a view type for ERC20 transactions

* Validate and send ERC20 transaction

* Send ERC20 transaction

* Add tokenSymbol and tokenDecials to ERC20TokenPaymentTask

--- a/app/src/main/res/layout/activity_send_erc20_token.xml
+++ b/app/src/main/res/layout/activity_send_erc20_token.xml
@@ -260,7 +260,7 @@
                 android:textAllCaps="true"
                 android:background="@drawable/background_with_radius_primary_color"
                 android:textColor="#FFFFFF"
-                android:text="@string/send"/>
+                android:text="@string/continue_"/>
 
             <android.support.v4.widget.Space
                 android:layout_width="0dp"
